Publish as tool

--- a/stay-awake.csproj
+++ b/stay-awake.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
-    <PublishSingleFile>true</PublishSingleFile>
-    <PublishTrimmed>true</PublishTrimmed>
     <RootNamespace>stay_awake</RootNamespace>
+
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>stay-awake</ToolCommandName>
+    <PackageOutputPath>./nupkg</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
